--- a/week2.html
+++ b/week2.html
@@ -3,15 +3,58 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-</head>
+	<title>week 3</title>
+	<style type="text/css">
+		img{
+			width: 200px;
+			height: 150px;
+			/*border: 60px ridge magenta; */
+			border-style: solid;
+			border-width: 60px;
+			border-color: magenta;
+		}
+
+		a{
+			text-decoration: none;
+
+		}
+
+		a:hover{
+			color: red;
+			background-color: yellow;
+		}
+
+		p{
+			font-family: cambria;
+			font-size: 20px;
+			font-style: italic;
+			font-weight: bold;
+			text-decoration: overline;
+			color: cyan;
+		}
+
+		p{
+			font-size: 40px;
+		}
+
+
+
+	</style>
+
 <body>
+	<!-- inline css -->
+	<!-- internal css
+	external css
+ -->
+<a href="week3.html">week 3</a>
 <p><b>Lorem</b> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut <i>labore</i> et <b><i><u>dolore</u></i></b> magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. <u>Excepteur</u> sint occaecat cupidatat non
+cillum dolore eu fugiat nulla pariatur. <u style="color:red">Excepteur</u> sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>second paragraph</p>
+
 <!-- <p></p> -->
 <!-- <br><br> -->
 <b>fav websites</b>
@@ -26,10 +69,15 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<li>restaurant</li>
 	<li>urheartxd</li>
 </ul>
-<img src="v-1.jpg" width="100" height="75">
+<!-- <img src="v-1.jpg" width="100" height="75">
 <img src="assets/images/v-2.jpg" width="100" height="75">
 <img src="assets/images/id/i-1.jpg" width="100" height="75">
 <img src="assets/images/my/m-1.jpg" width="100" height="75">
-<img src="assets/images/th/t-1.jpg" width="100" height="75">
+<img src="assets/images/th/t-1.jpg" width="100" height="75"> -->
+<img src="v-1.jpg">
+<img src="assets/images/v-2.jpg">
+<img src="assets/images/id/i-1.jpg">
+<img src="assets/images/my/m-1.jpg">
+<img src="assets/images/th/t-1.jpg">
 </body>
 </html>
